--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,52 +1,94 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="35sp"
+        android:textColor="@color/text"
+        android:text="@string/welcome"
+        android:layout_above="@+id/main_linear_layout"
+        android:layout_centerHorizontal="true"
+        />
+
     <LinearLayout
+        android:id="@+id/main_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerHorizontal="true">
+        android:layout_margin="@dimen/linear_layout_margin"
+        android:layout_centerInParent="true">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/name"
+            android:layout_marginStart="@dimen/title_edit_text_start_margin"
+            android:layout_marginLeft="@dimen/title_edit_text_start_margin"
+            android:textColor="@color/accent"/>
         <EditText
             android:id="@+id/name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/edit_text_bottom_margin"
             android:maxLines="1"
-            android:inputType="text"
-            android:hint="Name"/>
+            android:inputType="textCapSentences"
+            android:textColor="@color/text"
+            android:textColorHint="@color/secondary_text"
+            android:hint="@string/name"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/surname"
+            android:layout_marginStart="@dimen/title_edit_text_start_margin"
+            android:layout_marginLeft="@dimen/title_edit_text_start_margin"
+            android:textColor="@color/accent"/>
         <EditText
             android:id="@+id/surname_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:layout_marginBottom="@dimen/edit_text_bottom_margin"
             android:maxLines="1"
-            android:hint="Surname"/>
+            android:inputType="textCapSentences"
+            android:textColor="@color/text"
+            android:textColorHint="@color/secondary_text"
+            android:hint="@string/surname"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/birthday"
+            android:layout_marginStart="@dimen/title_edit_text_start_margin"
+            android:layout_marginLeft="@dimen/title_edit_text_start_margin"
+            android:textColor="@color/accent"/>
         <EditText
             android:id="@+id/birthday_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:focusable="false"
-            android:hint="Birthday"/>
-
-        <Button
-            android:id="@+id/ok_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:enabled="false"
-            android:text="Validate"/>
-
-
+            android:textColor="@color/text"
+            android:textColorHint="@color/secondary_text"
+            android:hint="@string/birthday"/>
 
     </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/ok_button"
+        android:layout_width="@dimen/fab_size"
+        android:layout_height="@dimen/fab_size"
+        app:fabSize="normal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:elevation="8dp"
+        android:src="@drawable/ic_done"
+        />
 
 </RelativeLayout>
