--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,18 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="title_edit_text_start_margin">5dp</dimen>
+    <dimen name="edit_text_bottom_margin">10dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_size">56dp</dimen>
+    <dimen name="linear_layout_margin">50dp</dimen>
+
+    <dimen name="translation_extra">10dp</dimen>
+
+    <dimen name="card_margin">8dp</dimen>
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_height">130dp</dimen>
+
+
 </resources>
